settings panel: vertical align for table rows fix

--- a/wp_instaroll/admin_style.css
+++ b/wp_instaroll/admin_style.css
@@ -17,3 +17,7 @@ img.profilePicture {
 	border-width: 2px;
 	border-color: #21759B;
 }
+
+#InstagramSettingsPanel tr {
+	vertical-align: top;
+}
